Updated so works with small media

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="Cocktail Recipe Generator"
+      content="Web application that generates random cocktail recipes at the click of a button! When you're unsure what drink to make, take the recipe generator for a spin!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
